--- a/client/src/App.css
+++ b/client/src/App.css
@@ -11,5 +11,15 @@ body, html {
     max-width: 1200px;
     margin: 0 auto;
   }
+
+  .custom-height {
+    height: 835px;
+  }
+
+  .footer-nav {
+    display: flex;
+    justify-content: flex-end;
+  }
+  
   
   /* Add other global styles as needed */
