--- a/client/src/App.css
+++ b/client/src/App.css
@@ -20,6 +20,17 @@ body, html {
     display: flex;
     justify-content: flex-end;
   }
+
+  .drop-upward {
+    border-radius: 0 0 0 0;
+    left: 0;
+    opacity: 0;
+    padding: 0 5px;
+    position: absolute;
+    bottom: 100%;
+    transition: opacity 0.5s ease 0s;
+
+  }
   
   
   /* Add other global styles as needed */
